# kbd

./: Makefile  README.md  cabal.project  stack.yaml
documents/: NOTES.md
kbd/: kbd.cabal
kbd/data/: example.txt
kbd/sources/: KBD.hs
kbd/sources/Internal/: Parsers.hs  Trifecta.hs
kbd/sources/Internal/KeyboardInput/: Milliseconds.hs  Tokens.hs  Utilities.hs
kbd/sources/KeyboardInput/: Syntax.hs
kbd/sources/KeyboardInput/Syntax/: Config.hs  Create.hs  Parse.hs  Types.hs
kbd/sources/KeyboardInput/Syntax/Action/: Parse.hs  Types.hs
kbd/sources/KeyboardInput/Syntax/Key/: Parse.hs  Types.hs
kbd/sources/Prelude/: KeyboardInput.hs
scripts/sboo/: ghcid.sh
